# gate

./: .gitignore  .golangci.yml  .goreleaser.yml  .release-please-config.json  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  changes.md  config-bedrock.yml  config-connect-ep.yml  config-connect-svc.yml  config-connect.yml  config-forge-test.yml  config-lite.yml  config-simple.yml  config-test-connect-ws-ep.yml  config-test-connect-ws-svc.yml  config.yml  gate.go  go.mod  go.sum  goal.txt  optimisation_plan.md  release_please_workflow_test.go  renovate.json
.examples/bedrock/: README.md  docker-compose.yml  gate.yml  server.properties  spigot.yml  start.sh
.examples/docker-compose/: .gitignore  config.yml  docker-compose.yml
.examples/kubernetes/: bundle.yaml  config.yml  deploy.yaml  kustomization.yaml  svc.yaml
.examples/simple-network/: README.md  config-velocity.yml  config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/testdata/: managed-bedrock.yml
.github/workflows/: build.yml  bump-managed-dependency.yml  ci.yml  image.yml  lint.yml  release-please.yml  release.yml  site.yml  test.yml
.web/: .gitignore  AGENTS.md  README.md  WIDGETBOT_SETUP.md  package.json  pnpm-lock.yaml  tailwind.config.js
.web/docs/: badges.md  extensions.md  index.md  team.md
.web/docs/developers/api/python/: index.md  main.py  pyproject.toml
.web/docs/developers/api/rust/: Cargo.toml  index.md
.web/docs/developers/api/rust/src/: main.rs
site/: .gitignore  config.toml  go.mod
(+746 files in other folders)
